--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@brianmcallister/react-auto-scroll": "^1.0.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -10,8 +11,10 @@
     "@types/node": "^12.12.34",
     "@types/react": "^16.9.31",
     "@types/react-dom": "^16.9.6",
+    "framer-motion": "^1.10.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hooks-global-state": "^1.0.0",
     "react-scripts": "3.4.1",
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.0.1",
