--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "3.4.1",
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.0.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "uikit-react": "^3.0.20"
   },
   "scripts": {
     "start": "react-scripts start",
